--- a/user_login.html
+++ b/user_login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ログイン</title>
-    <link rel="stylesheet" href="/SystemDev_G4/all-style.css" />
+    <link rel="stylesheet" href="all-style.css" />
     <link rel="stylesheet" href="user_login.css" />
   </head>
   <body>
