ページ間のリンクを追加、パスワード再設定画面を作成

--- a/student_job_list.html
+++ b/student_job_list.html
@@ -45,7 +45,7 @@
         </div>
     
         <div class="search-button-container">
-            <input type="submit" value="検索" id="search-button">
+            <input type="submit" value="検索" id="search-button" onclick="location.href='student_job_list.html'">
         </div>
     </div>
 
@@ -60,21 +60,21 @@
             </tr>
             <tr>
                 <td class="text-align-center">1</td>
-                <td class="padding-left-10"><a href="#">ABCシステム</a></td>
+                <td class="padding-left-10"><a href="job_info.html">ABCシステム</a></td>
                 <td class="text-align-center">東北(岩手県内)</td>
                 <td class="text-align-center">情報(PG, SE)</td>
                 <td class="text-align-center">2023</td>
             </tr>
             <tr>
                 <td class="text-align-center">2</td>
-                <td class="padding-left-10"><a href="#">あいうえおホールディングス</a></td>
+                <td class="padding-left-10"><a href="job_info.html">あいうえおホールディングス</a></td>
                 <td class="text-align-center">関東</td>
                 <td class="text-align-center">デザイン業</td>
                 <td class="text-align-center">2023</td>
             </tr>
             <tr>
                 <td class="text-align-center">3</td>
-                <td class="padding-left-10"><a href="#">123株式会社</a></td>
+                <td class="padding-left-10"><a href="job_info.html">123株式会社</a></td>
                 <td class="text-align-center">東北(岩手県外)</td>
                 <td class="text-align-center">製造</td>
                 <td class="text-align-center">2024</td>
@@ -83,7 +83,7 @@
     </div>
 
     <div class="return-button-container">
-        <input type="button" value="戻る" id="return-button">
+        <input type="button" value="戻る" id="return-button" onclick="history.back()">
     </div>
 
 </body>
