--- a/student_top.html
+++ b/student_top.html
@@ -11,10 +11,10 @@
     <div class="flex">
         <h1 class="student_top_text">学生トップ</h1>
         <!-- ログアウトボタン -->
-        <a href="" class="rogout_btn"><img src="">ログアウトボタン</a>
+        <a href="user_login.html" class="logout_btn"><img src="">ログアウトボタン</a>
     </div>
 
-    <a href="" class="job_search">求人情報を検索</a>
+    <a href="student_job_list.html" class="job_search">求人情報を検索</a>
 
     <div class="job_list">
         <p class="text_history">閲覧履歴</p>
@@ -31,7 +31,7 @@
 
             <tr>
                 <td>1</td>
-                <td><a href="">ABCシステム</a></td>
+                <td><a href="job_info.html">ABCシステム</a></td>
                 <td>東北(岩手県内)</td>
                 <td>情報(PG,SE)</td>
                 <td>2023</td>
@@ -39,7 +39,7 @@
 
             <tr>
                 <td>2</td>
-                <td><a href="">あいうえおホールディングス</a></td>
+                <td><a href="job_info.html">あいうえおホールディングス</a></td>
                 <td>関東</td>
                 <td>デザイン業</td>
                 <td>2023</td>
@@ -47,7 +47,7 @@
             
             <tr>
                 <td>3</td>
-                <td><a href="">123株式会社</a></td>
+                <td><a href="job_info.html">123株式会社</a></td>
                 <td>東北(岩手県外)</td>
                 <td>製造</td>
                 <td>2024</td>
