--- a/user_login.html
+++ b/user_login.html
@@ -15,8 +15,8 @@
         <input type="text" id="id" placeholder="" />
         <label for="password">パスワード</label>
         <input type="password" id="password" placeholder="" />
-        <a href="#">パスワードを変更</a>
-        <button type="submit" style="background-color: var(--button-color)">
+        <a href="password_change.html">パスワードを変更</a>
+        <button type="button" style="background-color: var(--button-color)" onclick="location.href='student_top.html'">
           ログイン
         </button>
       </form>
