ページ遷移などを修正

--- a/admin_top.html
+++ b/admin_top.html
@@ -13,10 +13,10 @@
     </div>
 
     <div class="flex flex_top_btn">
-        <a href="" class="top_btn job_list">求人情報一覧</a>
-        <a href="" class="top_btn job_register">求人情報登録</a>
-        <a href="" class="top_btn user_list">ユーザ情報一覧</a>
-        <a href="" class="top_btn user_register">ユーザ情報登録</a>
+        <a href="admin_job_list.html" class="top_btn job_list">求人情報一覧</a>
+        <a href="admin_job_register.html" class="top_btn job_register">求人情報登録</a>
+        <a href="admin_user_list.html" class="top_btn user_list">ユーザ情報一覧</a>
+        <a href="admin_user_register.html" class="top_btn user_register">ユーザ情報登録</a>
     </div>
 </body>
 </html>
