--- a/admin_user_edit.html
+++ b/admin_user_edit.html
@@ -12,7 +12,7 @@
       <form class="login-form">
         <h2>ユーザ編集</h2>
         <label for="id">ID</label>
-        <input type="text" id="id" placeholder="" />
+        <input type="text" id="id" placeholder="4233101" disabled/>
         <label for="password">名前</label>
         <input type="text" id="text" placeholder="" />
         <table class="checkbox-container">
