--- a/admin_user_list.html
+++ b/admin_user_list.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="return-button-container">
-        <input type="button" value="戻る" id="return-button" onclick="history.back()">
+        <input type="button" value="戻る" id="return-button" onclick="location.href='admin_top.html'">
     </div>
 
     <script>
